# soksak-sidecar-speech-sherpa

./: .gitignore  Cargo.toml  README.ko.md  README.md  THIRD-PARTY-NOTICES  build.rs  stage.sh
.github/workflows/: release.yml
release/: unit.json
src/: backend.rs  engine.rs  main.rs  supertonic.rs
